Fix MutableEntrySet.spliterator()'s setValue()
AbstractEntrySet should not use immutableIterator(), otherwise we end up
producing Entry objects which do not support Entry.setValue(). Fix this
up and add explicit tests.

Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 396ac7802d835216952d30850aa7af826d5d1020)